# doosan-robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  roboMakerSettings.json  setup.py  setup.sh  test.txt
common/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/imp/: DRFC.py  DR_error.py  DR_init.py  DSR_ROBOT.py
common/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h  dsr_robot.h  dsr_serial.h  dsr_util.h
common/lib/x86_32/: libPocoFoundation.so.16  libPocoUtil.so.16
common/lib/x86_64/: libPocoNet.so.16
common/servicepack/: auto_setup  setup_serial_node
common/servicepack/serial_node_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/src/: dsr_robot.cpp  dsr_serial.cpp
doosan_robot/: CHANGELOG.rst  CMakeLists.txt  install_emulator.sh  package.xml  uninstall_emulator.sh
doosan_robotics/: CHANGELOG.rst  CMakeLists.txt  package.xml
doosanrobotics-v0.41/dsr_control/: CMakeLists.txt
doosanrobotics-v0.41/dsr_control/launch/: dsr_control.launch
doosanrobotics-v0.41/dsr_control/src/: dsr_hw_interface.cpp
doosanrobotics-v0.41/dsr_test/cpp/: CMakeLists.txt  package.xml
doosanrobotics-v0.41/dsr_test/py/: CMakeLists.txt
doosanrobotics-v0.44/dsr_bringup/: CMakeLists.txt  package.xml
doosanrobotics-v0.44/dsr_bringup/launch/: dsr_base.launch
doosanrobotics-v0.44/dsr_control/: package.xml
doosanrobotics-v0.44/dsr_control/config/: dsr_control.yaml
doosanrobotics-v0.44/dsr_control/launch/: dsr_fake_control.launch  dsr_moveit.launch
doosanrobotics-v0.44/dsr_control/lib/: libPocoUtil.so.16
doosanrobotics-v0.44/dsr_description/: package.xml
doosanrobotics-v0.44/dsr_launcher/: package.xml
doosanrobotics/dsr_launcher/: CHANGELOG.rst  CMakeLists.txt
dsr_bringup/: CHANGELOG.rst  package.xml
dsr_bringup/launch/: dsr_base.launch
dsr_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
dsr_control/config/: console.conf  dsr_control.yaml  dsr_control_robotiq_2f.yaml  localization.yaml
dsr_control/launch/: dsr_control.launch  dsr_fake_control.launch  dsr_moveit.launch  dsr_moveit_test.launch
dsr_control/src/: dsr_control_node.cpp  dsr_hw_interface.cpp
dsr_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_description/config/: macro.decorations.xacro  macro.gazebo.xacro  macro.transmission.xacro  macro.wheel.xacro
dsr_description/launch/: a0509.launch  a0912.launch  dsr_description.launch  e0509.launch  h2017.launch  h2515.launch  m0609.launch  m0617.launch  m1013.launch  m1509.launch
dsr_description/rviz/: default.rviz  m1013.rviz  marker_visualisation.rviz
dsr_description/urdf/: e0509.urdf  m0609.urdf  m0617.urdf  m1013.urdf  m1509.urdf
dsr_description/xacro/: a0509.urdf.xacro  a0509mobile.urdf.xacro  a0912.urdf.xacro  a0912mobile.urdf.xacro  e0509.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0609mobile.urdf.xacro  m0617.urdf.xacro  m0617mobile.urdf.xacro  m1013.urdf.xacro  m1013mobile.urdf.xacro  m1013robotiq_2f.urdf.xacro  m1509.urdf.xacro  m1509mobile.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0509mobile.blue.xacro  macro.a0509mobile.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.a0912mobile.blue.xacro  macro.a0912mobile.white.xacro  macro.e0509.white.xacro  macro.h2017.blue.xacro  macro.h2017.white.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0609mobile.blue.xacro  macro.m0609mobile.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m0617mobile.blue.xacro  macro.m0617mobile.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1013mobile.blue.xacro  (+9 more)
dsr_example/cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_example/py/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_gazebo/config/: doosan_robot_controller.yaml  gazebo_ros_control_params.yaml
dsr_gazebo/launch/: dsr_base.launch  m0617.launch  m1013.launch  m1509.launch
dsr_gazebo/worlds/: empty.world
dsr_launcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_launcher/launch/: car.launch  dsr_mobile.launch  dsr_moveit.launch  dsr_moveit_gazebo.launch  kkk_all_m1013.launch  kkk_all_m1013x2.launch  kkk_gazebo_m1013.launch  kkk_gazebo_m1013_m0609.launch  kkk_rviz_m1013_m0609.launch  mobile.launch  mobile_m1013.launch  mobile_robot.launch  multi_gazebo.launch  multi_real.launch  multi_robot_gazebo.launch  multi_robot_rviz.launch  multi_robot_rviz_gazebo.launch  multi_virtual.launch  robot_all.launch  single_robot.launch  single_robot_gazebo.launch  single_robot_rviz.launch  single_robot_rviz_gazebo.launch  test_rviz.launch
dsr_launcher/rviz/: default.rviz  default_kinetic.rviz  default_noetic.rviz
dsr_launcher/scripts/: dmodel.py  dmodel_kinetic.py  dmodel_melodic.py  dmodel_noetic.py
dsr_launcher/worlds/: empty.world
dsr_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dsr_msgs/msg/: AlterMotionStream.msg  JogMultiAxis.msg  LogAlarm.msg  ModbusState.msg  RobotError.msg  RobotState.msg  RobotStateRT.msg  RobotStop.msg  ServoJRTStream.msg  ServoJStream.msg  ServoLRTStream.msg  ServoLStream.msg  SpeedJRTStream.msg  SpeedJStream.msg  SpeedLRTStream.msg  SpeedLStream.msg  TorqueRTStream.msg
m1509_ikfast_arm_plugin/: CMakeLists.txt  m1509_arm_moveit_ikfast_plugin_description.xml  package.xml
m1509_ikfast_arm_plugin/include/: ikfast.h
m1509_ikfast_arm_plugin/src/: m1509_GROUPNAME_moveit_ikfast_plugin.cpp.in  m1509_arm_ikfast_solver.cpp
moveit_config_h2515/: CHANGELOG.rst  CMakeLists.txt  package.xml
moveit_config_h2515/config/: h2515.srdf
moveit_config_h2515/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  h2515.launch  h2515_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+1223 files in other folders)
