<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>1.0.3</version>
  <description>common package for Doosan Robot</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
