<?xml version="1.0"?>
<package>
  <name>doosan_robot</name>
  <version>0.9.8</version>
  <description>ROS packages for Doosan Robot</description>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>


  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>doosan_robotics</run_depend>
  <run_depend>dsr_control</run_depend>
  <run_depend>dsr_description</run_depend>
  <run_depend>dsr_launcher</run_depend>
  <run_depend>dsr_example_py</run_depend>
  <run_depend>dsr_gazebo</run_depend>
  <run_depend>dsr_msgs</run_depend>
  <run_depend>moveit_config_m0609</run_depend>
  <run_depend>moveit_config_m0617</run_depend>
  <run_depend>moveit_config_m1013</run_depend>
  <run_depend>moveit_config_m1509</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
