<?xml version="1.0"?>
<package>
  <name>doosan_robot</name>
  <version>1.3.0</version>
  <description>ROS packages for Doosan Robot</description>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>


  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>doosan_robotics</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
