<?xml version="1.0"?>
<package format="2">
  <name>doosan_robotics</name>
  <version>0.9.6</version>
  <description>The doosan_robotics metapackage</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>
  <author email="zaxrok@gmail.com">Byungchul Choi</author>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dsr_control</exec_depend>
  <exec_depend>dsr_description</exec_depend>
  <exec_depend>dsr_launcher</exec_depend>
  <exec_depend>dsr_example_py</exec_depend>
  <exec_depend>dsr_example_cpp</exec_depend>
  <exec_depend>dsr_gazebo</exec_depend>
  <exec_depend>dsr_msgs</exec_depend>
  <exec_depend>moveit_config_m0609</exec_depend>
  <exec_depend>moveit_config_m0617</exec_depend>
  <exec_depend>moveit_config_m1013</exec_depend>
  <exec_depend>moveit_config_m1509</exec_depend>
  
  <build_depend>position_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_experimental</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>moveit_setup_assistant</build_depend>
  <build_depend>interactive_marker_twist_server</build_depend>
  <build_depend>lms1xx</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
</package>
