<?xml version="1.0"?>
<package format="2">
  <name>dsr_bringup</name>
  <version>0.4.5</version>
  <description>The dsr_bringup package</description>
  <maintainer email="bcc@todo.todo">bcc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
