<?xml version="1.0"?>
<package format="2">
  <name>dsr_description</name>
  <version>1.2.0</version>
  <description>The dsr_description package</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>
  <author email="minsoo.song@doosan.com">Minsoo Song</author>

  <maintainer email="minsoo.song@doosan.com">Minsoo Song</maintainer>
  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
