<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>m1509_ikfast_arm_plugin</name>
  <version>1.0.0</version>
  <description>The m1509_ikfast_arm_plugin package</description>
  <maintainer email="inigo.moreno@tecnalia.com">Iñigo Moreno</maintainer>
  <license>TRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>liblapack-dev</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>pluginlib</depend>

  <export>
    <moveit_core plugin="${prefix}/m1509_arm_moveit_ikfast_plugin_description.xml"/>
  </export>

</package>
