<?xml version="1.0"?>
<package format="2">
  <name>dsr_control</name>
  <version>0.0.0</version>
  <description>The dsr_control package</description>

  <maintainer email="bcc@todo.todo">bcc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>dsr_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>dsr_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>dsr_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
