<?xml version="1.0"?>
<package format="2">
  <name>dsr_description</name>
  <version>0.0.0</version>
  <description>The dsr_description package</description>
  <maintainer email="bcc@todo.todo">bcc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
